# kaggle_tutorial_zone

./: .gitignore  README.md  preprocessing.ipynb  pyproject.toml  tutorial_neo.ipynb
kaggle/: pyproject.toml
notebooks/1_eda/: 05211600_yaguchi_eda.ipynb  05211700_ito_eda.ipynb  05221105_ameku.ipynb
notebooks/2_preprocessing/: 05211800_ito_prepro.ipynb  05211830_ito_prepro.ipynb  05221125_ameku.ipynb  0522_ito_dividi_prepro.ipynb  0525_ito_active_product_prepro.ipynb  0525_ito_age_flag_prepro.ipynb  0525_ito_card_tenu_prepro.ipynb  sample.ipynb
notebooks/3_modeling/: 05211830_ito_prepro.ipynb  05221127_ameku.ipynb  0522_ito_gbm_modeling.ipynb  0522_ito_gbm_modeling_active_product.ipynb  0522_ito_gbm_modeling_ageflag.ipynb  0522_ito_gbm_modeling_card_tenu.ipynb  05251006_yaguchi.ipynb  05251030_ameku.ipynb  05251037_ameku.ipynb  05251115_ameku.ipynb  0525_ito_gbm_modeling_age_flag.ipynb  05261650_ameku.ipynb  05261653_ameku.ipynb  05261712_ameku.ipynb  05261716_ameku.ipynb  05261734_ameku.ipynb  05271026_ameku.ipynb
notebooks/4_evaluation/: 0522_ito_ageflag_eva.ipynb
notebooks/ALL/: 0527_NN_feat.ipynb
results/: submission.csv  submission_active_products.csv  submission_age_flag.csv  submission_card_tenure.csv
src/: preprocessing.ipynb
uv_tutorial/: pyproject.toml
uv_tutorial/src/uv_tutorial/: __init__.py
