[project]
name = "uv-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "neo-ambl", email = "neo.ito.rp@ambl.co.jp" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
]

[project.scripts]
uv-tutorial = "uv_tutorial:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"
